# vscoq

./: .gitignore  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
client/: package.json
client/goal-view-ui/src/components/atoms/: Goal.tsx  Hypothesis.tsx  Message.tsx  PpString.module.css  Separator.module.css
client/goal-view-ui/src/components/molecules/: GoalBlock.module.css  HypothesesBlock.module.css
client/pp-display/: package.json
client/pp-display/src/: Pp.module.css  pp-box.tsx  pp.tsx
client/search-ui/src/: App.tsx
client/search-ui/src/components/atoms/: Error.module.css  ResultName.module.css  ResultName.tsx  ResultStatement.module.css  ResultStatement.tsx
client/search-ui/src/components/molecules/: QueryResult.tsx
client/src/: QuickFixProvider.ts  client.ts  configuration.ts  extension.ts  manualChecking.ts
client/src/panels/: DocumentStateViewProvider.ts  GoalPanel.ts  SearchViewProvider.ts
client/src/protocol/: types.ts
client/src/test/: runTest.ts
client/src/test/suite/: extension.test.ts  feedback.test.ts  feedback_delegation.test.ts  feedback_skip.test.ts
client/src/utilities/: toolchain.ts  versioning.ts
client/syntax/: coq.language-configuration.json  coq.tmLanguage.json  rocq.tmLanguage.json
docs/: FAQ.md
language-server/: Makefile  README.md  dune  dune-project  make-release.sh  vscoq-language-server.opam  vsrocq-language-server.opam
language-server/dm/: README.md  completionSuggester.ml  completionSuggester.mli  delegationManager.ml  delegationManager.mli  document.ml  document.mli  documentManager.ml  documentManager.mli  dune  dune.in  executionManager.ml  executionManager.mli  log.ml  log.mli  parTactic.ml  parTactic.mli  rawDocument.ml  rawDocument.mli  scheduler.ml  scheduler.mli  searchQuery.ml  searchQuery.mli  types.ml  vscoqtop_tactic_worker.ml  vsrocqtop_proof_worker.ml
language-server/etc/: dune  rocq-wrap-coqc.sh
language-server/language/: dune  dune.in  hover.ml  hover.mli
language-server/protocol/: dune  dune.in  extProtocol.ml  lspWrapper.ml  ppProofState.ml  printing.ml  printing.mli  proofState.ml  proofState.mli  settings.ml
language-server/tests/: common.ml  dm_tests.ml  dune  em_tests.ml  goals.ml  s_tests.ml
language-server/vscoqtop/: lspManager.ml  lspManager.mli  vscoqtop.ml
language-server/vsrocqtop/: README.md  args.ml  args.mli  dune  dune.in  lspManager.ml  lspManager.mli  vsrocqtop.ml
