opam-version: "2.0"
name: "vsrocq-language-server"
maintainer: "Enrico Tassi <enrico.tassi@inria.fr>"
authors: [ "Enrico Tassi" "Maxime Dénès" "Romain Tetley" ]
license: "MIT"
homepage: "https://github.com/rocq-prover/vsrocq"
bug-reports: "https://github.com/rocq-prover/vsrocq/issues"
dev-repo: "git+https://github.com/rocq-prover/vsrocq"

build: [
  ["etc/rocq-wrap-coqc.sh"] {!coq-core:installed}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" { >= "4.14" }
  "dune" { >= "3.5" }
  ("coq-core" { ((>= "8.18" < "8.21") | (= "dev")) }
  | "rocq-core" { ((>= "9.0+rc1" < "9.1~") | (= "dev")) })
  ("coq-stdlib" { ((>= "8.18" < "8.21") | (= "dev")) }
  | "rocq-stdlib" { ((>= "9.0+rc1" < "9.1~") | (= "dev")) })
  "yojson"
  "jsonrpc" { >= "1.15"}
  "ocamlfind"
  "ppx_inline_test"
  "ppx_assert"
  "ppx_sexp_conv"
  "ppx_deriving"
  "sexplib"
  "ppx_yojson_conv"
  "ppx_import"
  "ppx_optcomp"
  "result" { >= "1.5" }
  "lsp" { >= "1.15"}
  "sel" {>= "0.6.0"}
]
synopsis: "VSRocq language server"
available: arch != "arm32" & arch != "x86_32"
description: """
LSP based language server for Rocq and its VSRocq user interface
"""
